--- a/flaskblog/templates/layout_topic.html
+++ b/flaskblog/templates/layout_topic.html
@@ -36,7 +36,11 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
+                {% if topic %}
+                <a class="navbar-brand mr-4" href="?">{{ topic_name }}</a>
+                {% else %}
                 <a class="navbar-brand mr-4" href="?">andrew's notebook</a>
+                {% endif %}
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -44,23 +48,25 @@
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
                         <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a>
-                        <a class="nav-item nav-link" href="{{ url_for('main.portfolio') }}">Portfolio</a>
                         <li class="nav-item dropdown">
                             <div class="animate-dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Subjects
                                 </a>
                                 <div class="dropdown-menu">
-                                    <!--<a class="dropdown-item" href="{{ url_for('chem.chem_home') }}"</a>>Chemistry</a>
-                                    <div class="dropdown-divider"></div>-->
-                                    <!--<a class="dropdown-item" href="{{ url_for('cheme.cheme_home')}}">Chemical Engineering</a>
-                                    <div class="dropdown-divider"></div>-->
+                                    <a class="dropdown-item" href="{{ url_for('chem.chem_home') }}">Chemistry</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="{{ url_for('cheme.cheme_home')}}">Chemical Engineering</a>
+                                    <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="{{ url_for('math.math_home') }}">Mathematics</a>
-                                    <!--<div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="{{ url_for('phys.phys_home')}}">Physics</a>-->
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="{{ url_for('phys.phys_home')}}">Physics</a>
                                 </div>
                             </div>
                         </li>
+                        {% if topic %}
+                            {% block navbar %}{% endblock %}
+                        {% endif %}
                         <a class="nav-item nav-link" href="{{ url_for('main.blog') }}">Blog</a>
                     </div>
                     <!-- Navbar Right Side -->
@@ -84,19 +90,19 @@
         <div class="row">
 
             <!-------------------- Main Content Configurations -------------------->
-            {% if sidebar or portfolio %}
-            <div class="col-md-8 site-main">
+            {% if topic %}
+                <div class="col-md-9 site-main">
             {% else %}
-            <div class="col-md-12 site-main">
+                <div class="col-md-12 site-main">
             {% endif %}
 
             <!-------------------- Flashed Messages -------------------->
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                     {% for category, message in messages %}
-                    <div class="alert alert-{{ category }}">
-                        {{ message }}
-                    </div>
+                        <div class="alert alert-{{ category }}">
+                            {{ message }}
+                        </div>
                     {% endfor %}
                 {% endif %}
             {% endwith %}
@@ -106,37 +112,13 @@
             </div>
 
             <!-------------------- Sidebar Configurations -------------------->
-            {% if sidebar %}
-            <div class="col-md-4 site-sidebar">
-                <!-------------------- Announcements -------------------->
-                {% if sb_ann %}
-                <div class="content-section">
-                    <h3>Announcements</h3>
-                    <p class='text-muted'>You can put any information here you'd like.
-                        <ul class="list-group">
-                            <li class="list-group-item list-group-item-light">Latest Posts</li>
-                            <li class="list-group-item list-group-item-light">Announcements</li>
-                            <li class="list-group-item list-group-item-light">Calendars</li>
-                            <li class="list-group-item list-group-item-light">etc</li>
-                        </ul>
-                    </p>
-                </div>
-                {% endif %}
-
-                <!-------------------- Portfolio -------------------->
-                {% if sb_port %}
-                    {% block sidebar_portfolio %}{% endblock %}
-                {% endif %}
-
-                <!-------------------- Custom -------------------->
-                {% if sb_cus %}
-                    {% block sidebar_custom %}{% endblock %}
-                {% endif%}
-            
+            {% if topic %}
+            <div class="col-md-3 site-sidebar">
+                {% block sidebar_topic %}{% endblock %}
             {% else %}
             <div class="col-md-12 site-main">
             {% endif %}
-
+            
             </div>
 
         </div>
