--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -1,4 +1,8 @@
-body {
+  *{
+    font-family: sans-serif;
+  }
+
+  body {
     background:#eaeaef;
     color: #333333;
     margin-top: 4rem;
@@ -49,7 +53,6 @@ body {
     border: 1px solid #dddddd;
     border-radius: 3px;
     margin: 30px 20px 30px 0px;
-    font-size: 20px;
   }
 
   .content-section-portfolio {
@@ -184,4 +187,12 @@ body {
   ul.subject{
     padding-top: 0px;
     padding-left: 45px;
+  }
+
+  ul.topic {
+    padding-left: 45px;
+  }
+
+  li.topic {
+    padding-left: 10px;
   }
