--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -6,14 +6,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS CDN -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css')}}">
 
+    <!-- Scrollbar Custom CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
+    
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <!-- Font Awesome JS -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+    
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163687277-1"></script>
     <script>
@@ -33,32 +41,84 @@
 </head>
 
 <body>
-    <header class="site-header">
-        <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
-            <div class="container">
-                <a class="navbar-brand mr-4" href="{{ url_for('main.home') }}">andrew's notebook</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
 
-                <div class="collapse navbar-collapse" id="navbarToggle">
-                    <div class="navbar-nav mr-auto">
-                        <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a>
-                        <a class="nav-item nav-link" href="{{ url_for('main.portfolio') }}">Portfolio</a>
-                        <li class="nav-item dropdown">
-                            <div class="animate-dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Notes
-                                </a>
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="{{ url_for('subjects.subject_index') }}">Academic Notes</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="{{ url_for('subjects.subject_index') }}">Professional Dev.</a>
-                                </div>
-                            </div>
-                        </li>
-                        <a class="nav-item nav-link" href="{{ url_for('main.blog') }}">Blog</a>
-                    </div>
+<div class="overlay"></div>
+
+<div class="wrapper">
+    <nav id="sidebar">
+
+        <div id="dismiss">
+            <i class="fas fa-arrow-left"></i>
+        </div>
+
+        <div class="sidebar-header">
+            <h3 class="sidebar-header">andrew's notes</h3>
+
+            
+        </div>
+        
+        <ul class="list-unstyled portfolio">
+            <li><a class="side-navbar " href="{{ url_for('main.portfolio') }}">My Portfolio</a></li>
+        </ul>
+
+        <ul class="list-unstyled components">
+            <p><b>Site Navigation:</b></p>
+            <li>
+                <a class="side-navbar" href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Home <small>&#9662;</small></a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <li>
+                        <a class="side-navbar" href="{{ url_for('main.home') }}">Main Home</a>
+                    </li>
+                    <li>
+                        <a class="side-navbar" href="{{ url_for('subjects.subject_index') }}">Subjects Home</a>
+                    </li>
+                </ul>
+            </li>
+            
+            <li>
+                <a class="side-navbar" href="#pageSubmenu" data-toggle="collapse" aria-expanded="false">Notes <small>&#9662;</small></a>
+                <ul class="collapse list-unstyled" id="pageSubmenu">
+                    <li>
+                        <a class="side-navbar" href="#acadSubmenu" data-toggle="collapse" aria-expanded="false"><u>Academic Notes</u></a>
+                        <ul class="collapse list-unstyled" id="acadSubmenu">
+                            <li>
+                                <a class="side-navbar sidebar-padding-left" href="{{ url_for('subjects.subject_home', subject_name='cheme') }}">- Chemical Engineering Notes</a>
+                            </li>
+                            <li>
+                                <a class="side-navbar sidebar-padding-left" href="{{ url_for('subjects.subject_home', subject_name='math') }}">- Mathematics Notes</a>
+                            </li>
+                            <li>
+                                <a class="side-navbar sidebar-padding-left" href="{{ url_for('subjects.subject_home', subject_name='phys') }}">- Physics Notes</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <!--
+                    <li>
+                        <a class="side-navbar" href="#"><u>Professional Development</u></a>
+                    </li>
+                    -->
+                </ul>
+            </li>
+            <li>
+                <a class="side-navbar" href="{{ url_for('main.blog') }}">Blog</a>
+            </li>
+            <li>
+                <a class="side-navbar" href="{{ url_for('main.contact') }}">Contact</a>
+            </li>
+        </ul>
+    </nav>
+
+    <header class="site-header">
+        <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-steel">
+
+            <div class="container-fluid">
+
+                <button type="button" id="sidebarCollapse" class="btn btn-info">
+                    <i class="fas fa-align-left"></i>
+                    <span></span>
+                </button>
+                <a class="navbar-brand mr-auto padding-left" href="{{ url_for('main.home') }}">andrew's notes</a>
+                
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
                         {% if current_user.is_authenticated %}
@@ -80,14 +140,10 @@
         <div class="row">
 
             <!-------------------- Main Content Configurations -------------------->
-            {% if sidebar or portfolio %}
-            <div class="col-md-8 site-main">
-            {% else %}
-            <div class="col-md-12 site-main">
-            {% endif %}
+            <div class="col-md-12 site-main padding-style">
 
-            <!-------------------- Flashed Messages -------------------->
-            {% with messages = get_flashed_messages(with_categories=true) %}
+                <!-------------------- Flashed Messages -------------------->
+                {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                     {% for category, message in messages %}
                     <div class="alert alert-{{ category }}">
@@ -95,8 +151,23 @@
                     </div>
                     {% endfor %}
                 {% endif %}
-            {% endwith %}
+                {% endwith %}
+            </div>
+
+            {% if sidebar or portfolio %}
+            <div class="col-md-8 site-main">
+            {% else %}
+            <div class="col-md-12 site-main">
+            {% endif %}
+
             <!-------------------- Main Content -------------------->
+            
+            <div class="content-section" id="warning-mobile" style="border-top-color: red;">
+                <h2 class="article-title">Dear Mobile/Tablet Users</h2>
+                <div class="article-content">
+                    This site has <b>not</b> been optimized to work with mobile devices. Please use a laptop or desktop for the best experience, thank you for understanding!
+                </div>
+            </div>
             {% block content %}{% endblock %}
 
             </div>
@@ -107,15 +178,54 @@
                 <!-------------------- Announcements -------------------->
                 {% if sb_ann %}
                 <div class="content-section">
-                    <h3>Announcements</h3>
-                    <p class='text-muted'>You can put any information here you'd like.
-                        <ul class="list-group">
-                            <li class="list-group-item list-group-item-light">Latest Posts</li>
-                            <li class="list-group-item list-group-item-light">Announcements</li>
-                            <li class="list-group-item list-group-item-light">Calendars</li>
-                            <li class="list-group-item list-group-item-light">etc</li>
-                        </ul>
-                    </p>
+                    <h3>Update Notes:</h3>
+                    <div class="dropdown-divider"></div>
+
+                    <table style="width: 300px;">
+                        <tr>
+                            <td><u>May 11, 2020</u></td>
+                        </tr>
+                        <tr>
+                            <td><ul type="square"><li>New sidebar navigation</li></ul></td>
+                            <td><ul type="square"><li>First Chapter of CRE notes is up!</li></ul></td>
+                            <td><ul type="square"><li>Contact page is up and running!</li></ul></td>
+                        </tr>
+
+                        <tr><td><br></td></tr>
+
+                        <tr>
+                            <td><u>May 9, 2020</u></td>
+                        </tr>
+                        <tr>
+                            <td><ul type="square"><li>Striked out items mean they are not available yet</li></ul></td>
+                        </tr>
+
+                        <tr><td><br></td></tr>
+
+                        <tr>
+                            <td><u>May 7, 2020</u></td>
+                        </tr>
+                        <tr><td><ul type="square"><li>New navigation bar update</li></ul></td></tr>
+                        <tr><td><ul type="square"><li>Subject/topic layout has been changed</li></ul></td></tr>
+
+                        <tr><td><br></td></tr>
+
+                        <tr>
+                            <td><u>April 17, 2020</u></td>
+                        </tr>
+                        <tr>
+                            <td><ul type="square"><li>Portfolio is now online!</li></ul></td>
+                        </tr>
+                        <!--
+                        <tr>
+                            <u>May 7, 2020</u>
+                        </tr>
+
+                        <tr>
+                            <td>- New navigation bar update</td>
+                        </tr>
+                        -->
+                    </table>
                 </div>
                 {% endif %}
 
@@ -139,7 +249,7 @@
     </main>
 
     {% if thisispost %}
-        <footer class="footer fixed-bottom">
+        <footer class="footer navbar-fixed-bottom neg-btm-margin">
             <p>&copy; 2020 <span>&#183;</span> <a class="footer-link" href="/">andrew's notes</a> <span>&#183;</span> andrew sutjahjo</p>
         </footer>
     {% else %}
@@ -147,13 +257,38 @@
             <p>&copy; 2020 <span>&#183;</span> <a class="footer-link" href="/">andrew's notes</a> <span>&#183;</span> andrew sutjahjo</p>
         </footer>
     {% endif %}
+    </div>
+</div>
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- Popper.JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <!-- jQuery Custom Scroller CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("#sidebar").mCustomScrollbar({
+                theme: "minimal"
+            });
+
+            $('#dismiss, .overlay').on('click', function () {
+                $('#sidebar').removeClass('active');
+                $('.overlay').removeClass('active');
+            });
+
+            $('#sidebarCollapse').on('click', function () {
+                $('#sidebar').addClass('active');
+                $('.overlay').addClass('active');
+                $('.collapse.in').toggleClass('in');
+                $('a[aria-expanded=true]').attr('aria-expanded', 'false');
+            });
+        });
+    </script>
 </body>
 
 </html>
