--- a/flaskblog/templates/portfolio.html
+++ b/flaskblog/templates/portfolio.html
@@ -91,7 +91,7 @@
     <div class="content-section-portfolio">
         <h4><u>Education</u></h4>
 
-        <table>
+        <table style="width: 300px;">
             <tr>
                 <td class="medium-text">Stony Brook University</td>
                 <td class="align-right"><small class="text-muted">New York</small></td>
@@ -127,18 +127,18 @@
             <li>
                 Reading self-improvement books
                 <small><u>Recommendations</u></small>
-                <table>
+                <table style="width: 270px;">
                     <tr>
                         <td>1. Principles</td>
-                        <td><small>Ray Dalio</small></td>
+                        <td style="text-align: right;"><small>Ray Dalio</small></td>
                     </tr>
                     <tr>
                         <td>2. Atomic Habits</td>
-                        <td><small>James Clear</small></td>
+                        <td style="text-align: right;"><small>James Clear</small></td>
                     </tr>
                     <tr>
                         <td>3. The Compound Effect</td>
-                        <td><small>Darren Hardy</small></td>
+                        <td style="text-align: right;"><small>Darren Hardy</small></td>
                     </tr>
                 </table>
             </li>
@@ -150,18 +150,18 @@
             <li>
                 Experimenting on andrew's notes<br>
                 <small><u>Looking at</u></small>
-                <table>
+                <table style="width: 270px;">
                     <tr>
                         <td>1. Flask Security</td>
-                        <td><small>For secure logins</small></td>
+                        <td style="text-align: right;"><small>For secure logins</small></td>
                     </tr>
                     <tr>
                         <td>2. Javascript</td>
-                        <td><small>For better UI/UX</small></td>
+                        <td style="text-align: right;"><small>For better UI/UX</small></td>
                     </tr>
                     <tr>
                         <td>3. SQL Alchemy</td>
-                        <td><small>For better data mgmt.</small></td>
+                        <td style="text-align: right;"><small>For better data mgmt.</small></td>
                     </tr>
                 </table>
             </li>
@@ -173,18 +173,18 @@
             <li>
                 Cooking!<br>
                 <small><u>Favorite Cuisines | Dish</u></small>
-                <table>
+                <table style="width: 270px;">
                     <tr>
                         <td>1. Indonesian</td>
-                        <td><small>Soto Ayam Banjarmasin</small></td>
+                        <td style="text-align: right;"><small>Soto Ayam Banjarmasin</small></td>
                     </tr>
                     <tr>
                         <td>2. Chinese</td>
-                        <td><small>Hokkien Mee</small></td>
+                        <td style="text-align: right;"><small>Hokkien Mee</small></td>
                     </tr>
                     <tr>
                         <td>3. English</td>
-                        <td><small>Fish & Chips</small></td>
+                        <td style="text-align: right;"><small>Fish & Chips</small></td>
                     </tr>
                 </table>
             </li>
