Added new CRE content

--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -324,6 +324,7 @@
     width: 70%;
     height: 70%;
     border: 1px solid black;
+    margin-bottom: 20px;
   }
 
   p.topic-center-item{
@@ -348,7 +349,7 @@
     padding-left: 25px;
   }
 
-  ul.topic-equations li{
+  ul.topic-equations li, p.topic-equations{
     padding: 10px;
   }
   /* ---------------------------------------------------- */
