--- a/flaskblog/templates/portfolio.html
+++ b/flaskblog/templates/portfolio.html
@@ -7,7 +7,7 @@
         <!-------------------- Dow Chemical Internsip @ loc TBD -------------------->
         <div class="container">
             <h4>Dow Chemical</h4>
-            <i> Manufacturing & Engineering Intern </i> <span>&#8226</span> Jun '20 - Aug '20
+            <i> Improvement Engineering Intern </i> <span>&#8226</span> Jun '20 - Aug '20
             <p></p>
         </div>
 
